Implemented writing out of complete version

--- a/outputExample.html
+++ b/outputExample.html
@@ -33,8 +33,8 @@ Ross van der Heyde
 </table>
 
 <!-- now the full details of each -->
-<p>---------------------------------------------</p>
-<div class="test">
+<p>----DocComment.outputComplete will output this whole piecevvvvv</p>
+<div class="test0">
     <!-- Function -->
     <h6>Name</h6>
     <p>description</p>
@@ -42,15 +42,15 @@ Ross van der Heyde
     <p>Parameters</p>
     <table class="tableClass">
         <tr>
-            <th>Name</th>
-            <th><b>Type</b></th>
-            <th>Description</th>
+            <td>Name</td>
+            <td><b>Type</b></td>
+            <td>Description</td>
         </tr>
     </table>
 
     <p>Returns: Type, description</p>
 </div>
-<p>---------------------------------------------</p>
+<p>---------------------------------------------------------^^^^^</p>
 
 <div class="test1">
     <!-- Procedure -->
@@ -83,7 +83,6 @@ Ross van der Heyde
     </table>
 </div>
 
-<p>---------------------------------------------</p>
 
 </body>
 </html>
