Tidied up html output.

--- a/output.html
+++ b/output.html
@@ -101,7 +101,7 @@
             <td>the Author's ID number</td>
         </tr>
     </table>
-    <p>Column set</p>
+    <p>Column set:</p>
     <table class="tableClass">
         <tr>
             <td>id</td>
@@ -130,7 +130,7 @@
             <td>minimum yr</td>
         </tr>
     </table>
-    <p>Column set</p>
+    <p>Column set:</p>
     <table class="tableClass">
         <tr>
             <td>title</td>
