Created Sproc class, added functionality for parsing command line args.

--- a/testOutput.html
+++ b/testOutput.html
@@ -17,129 +17,148 @@
         <th>Name</th>
         <th>Parameters</th>
     </tr>
-    <tr>
-        <td>INT</td>
-        <td><b>GetSeriesID</b></td>
-        <td>INT bookID</td>
-    </tr>
-    <tr>
-        <td>int</td>
-        <td><b>IsFiction</b></td>
-        <td>Int idNum</td>
-    </tr>
-    <tr>
-        <td><i>columns</i></td>
-        <td><b>addAuthor</b></td>
-        <td>VARCHAR(100) name</td>
-    </tr>
-    <tr>
-        <td><i>columns</i></td>
-        <td><b>searchAuthorID</b></td>
-        <td>Int author</td>
-    </tr>
-    <tr>
-        <td><i>columns</i></td>
-        <td><b>searchDateGreater</b></td>
-        <td>INT m, INT y</td>
-    </tr>
+	<tr>
+		<td>INT</td>
+		<td><b>GetSeriesID</b></td>
+		<td>INT bookID</td>
+	</tr>
+	<tr>
+		<td>int</td>
+		<td><b>IsFiction</b></td>
+		<td>Int idNum</td>
+	</tr>
+	<tr>
+		<td><i>columns</i></td>
+		<td><b>addAuthor</b></td>
+		<td>VARCHAR(100) name</td>
+	</tr>
+	<tr>
+		<td><i>columns</i></td>
+		<td><b>searchAuthorID</b></td>
+		<td>Int author</td>
+	</tr>
+	<tr>
+		<td><i>columns</i></td>
+		<td><b>searchDateGreater</b></td>
+		<td>INT m, INT y</td>
+	</tr>
+	<tr>
+		<td><i>columns</i></td>
+		<td><b>testSprocAGAIN</b></td>
+		<td>VARCHAR(100) name</td>
+	</tr>
 
 </table>
 
 <!-- now the full details of each -->
 <div class="test0">
-    <!-- Function -->
-    <h4>GetSeriesID</h4>
-    <p>Returns an int with the ID number of the series that the given book is
-        in</p>
-    <p>Parameters:</p>
-    <table class="tableClass">
-        <tr>
-            <td>bookID</td>
-            <td><b>INT</b></td>
-            <td>ID number of the book</td>
-        </tr>
-    </table>
-    <p>Returns: INT, ID number of the book's series</p>
+	<!-- Function -->
+	<h4>GetSeriesID</h4>
+	<p>Returns an int with the ID number of the series that the given book is
+		in</p>
+	<p>Parameters:</p>
+	<table class="tableClass">
+		<tr>
+			<td>bookID</td>
+			<td><b>INT</b></td>
+			<td>ID number of the book</td>
+		</tr>
+	</table>
+	<p>Returns: INT, ID number of the book's series</p>
 </div>
 <div class="test1">
-    <!-- Function -->
-    <h4>IsFiction</h4>
-    <p>Returns 1 if the given Book is in the Fiction table, 0 otherwise</p>
-    <p>Parameters:</p>
-    <table class="tableClass">
-        <tr>
-            <td>idNum</td>
-            <td><b>Int</b></td>
-            <td>ID number of the Book</td>
-        </tr>
-    </table>
-    <p>Returns: int, 1 if the book is Fiction, 0 otherwise.</p>
+	<!-- Function -->
+	<h4>IsFiction</h4>
+	<p>Returns 1 if the given Book is in the Fiction table, 0 otherwise</p>
+	<p>Parameters:</p>
+	<table class="tableClass">
+		<tr>
+			<td>idNum</td>
+			<td><b>Int</b></td>
+			<td>ID number of the Book</td>
+		</tr>
+	</table>
+	<p>Returns: int, 1 if the book is Fiction, 0 otherwise.</p>
 </div>
 <div class="test0">
-    <!-- Procedure-->
-    <h4>addAuthor</h4>
-    <p>Adds an Author with the given name to the Authors table. Automatically
-        inserts an ID number</p>
-    <p>Parameters:</p>
-    <table class="tableClass">
-        <tr>
-            <td>name</td>
-            <td><b>VARCHAR(100)</b></td>
-            <td>the author's full name</td>
-        </tr>
-    </table>
+	<!-- Procedure-->
+	<h4>addAuthor</h4>
+	<p>Adds an Author with the given name to the Authors table. Automatically
+		inserts an ID number</p>
+	<p>Parameters:</p>
+	<table class="tableClass">
+		<tr>
+			<td>name</td>
+			<td><b>VARCHAR(100)</b></td>
+			<td>the author's full name</td>
+		</tr>
+	</table>
 </div>
 <div class="test1">
-    <!-- Procedure-->
-    <h4>searchAuthorID</h4>
-    <p>Returns the books with which the given Author has a role</p>
-    <p>Parameters:</p>
-    <table class="tableClass">
-        <tr>
-            <td>author</td>
-            <td><b>Int</b></td>
-            <td>the Author's ID number</td>
-        </tr>
-    </table>
-    <p>Column set</p>
-    <table class="tableClass">
-        <tr>
-            <td>id</td>
-            <td>title</td>
-            <td>id</td>
-            <td>name</td>
-            <td>role</td>
-        </tr>
-    </table>
+	<!-- Procedure-->
+	<h4>searchAuthorID</h4>
+	<p>Returns the books with which the given Author has a role</p>
+	<p>Parameters:</p>
+	<table class="tableClass">
+		<tr>
+			<td>author</td>
+			<td><b>Int</b></td>
+			<td>the Author's ID number</td>
+		</tr>
+	</table>
+	<p>Column set:</p>
+	<table class="tableClass">
+		<tr>
+			<td>AllBooks.id as bookID</td>
+			<td>title</td>
+			<td>Authors.id as authorID</td>
+			<td>name</td>
+			<td>role</td>
+		</tr>
+	</table>
 </div>
 <div class="test0">
-    <!-- Procedure-->
-    <h4>searchDateGreater</h4>
-    <p>Returns the books bought after the given date. After such that mnth > m,
-        and yr >= y</p>
-    <p>Parameters:</p>
-    <table class="tableClass">
-        <tr>
-            <td>m</td>
-            <td><b>INT</b></td>
-            <td>minimum month</td>
-        </tr>
-        <tr>
-            <td>y</td>
-            <td><b>INT</b></td>
-            <td>minimum yr</td>
-        </tr>
-    </table>
-    <p>Column set</p>
-    <table class="tableClass">
-        <tr>
-            <td>title</td>
-            <td>author</td>
-            <td>price</td>
-            <td>mnth</td>
-            <td>yr</td>
-        </tr>
-    </table>
+	<!-- Procedure-->
+	<h4>searchDateGreater</h4>
+	<p>Returns the books bought after the given date. After such that mnth > m,
+		and yr >= y</p>
+	<p>Parameters:</p>
+	<table class="tableClass">
+		<tr>
+			<td>m</td>
+			<td><b>INT</b></td>
+			<td>minimum month</td>
+		</tr>
+		<tr>
+			<td>y</td>
+			<td><b>INT</b></td>
+			<td>minimum yr</td>
+		</tr>
+	</table>
+	<p>Column set:</p>
+	<table class="tableClass">
+		<tr>
+			<td>title</td>
+			<td>author</td>
+			<td>price</td>
+			<td>mnth</td>
+			<td>yr</td>
+		</tr>
+	</table>
+</div>
+<div class="test1">
+	<!-- Procedure-->
+	<h4>testSprocAGAIN</h4>
+	<p>Adds an NEW SPROC with the given name to the Authors table.
+		Automaticallyinserts anID number BECUASE AUTONUM</p>
+	<p>Parameters:</p>
+	<table class="tableClass">
+		<tr>
+			<td>name</td>
+			<td><b>VARCHAR(100)</b></td>
+			<td>the author's full name</td>
+		</tr>
+	</table>
 </div>
 
 </body>
